--- a/store/store_list.html
+++ b/store/store_list.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header_wrap disFlex align-center justify-space-between">
             <a href="../index.html">
-                <img src="../images/logo_color.png" alt="로고">
+                <img src="../images/logo_design_4.png" alt="로고">
             </a>
             <ul class="search_bar disFlex">
                 <li><input type="text" class="search_1" placeholder="지역"></li>
@@ -453,7 +453,7 @@
     </div>
     <footer>
         <div id="footer_inner" class="disFlex justify-space-between">
-            <div class="logo"><img src="../images/logo_black.png" alt=""></div>
+            <div class="logo"><img src="../images/logo_small.png" alt=""></div>
             <div>
                 <ul class="footer_ul disFlex">
                     <li><a href="">개인정보이용약관</a></li>
