--- a/store/store_view.html
+++ b/store/store_view.html
@@ -21,7 +21,7 @@
     <header>
         <div class="header_wrap disFlex align-center justify-space-between">
             <a href="../index.html">
-                <img src="../images/logo_color.png" alt="로고">
+                <img src="../images/logo_design_4.png" alt="로고">
             </a>
             <ul class="search_bar disFlex">
                 <li><input type="text" class="search_1" placeholder="지역"></li>
@@ -41,11 +41,11 @@
             <div class="store_photo">
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="../images/review/870475_1661158051213_9322.jpg"></div>
-                        <div class="swiper-slide"><img src="../images/review/870475_1661158051213_9323.jpg"></div>
-                        <div class="swiper-slide"><img src="../images/review/870475_1661158051213_9322.jpg"></div>
-                        <div class="swiper-slide"><img src="../images/review/870475_1661158051213_9322.jpg"></div>
-                        <div class="swiper-slide"><img src="../images/review/870475_1661158051213_9322.jpg"></div>
+                        <div class="swiper-slide"><img src="../images/review/moru_1.jpg"></div>
+                        <div class="swiper-slide"><img src="../images/review/moru_2.jpg"></div>
+                        <div class="swiper-slide"><img src="../images/review/moru_3.jpg"></div>
+                        <div class="swiper-slide"><img src="../images/review/moru_4.jpg"></div>
+                        <div class="swiper-slide"><img src="../images/review/moru_5.jpg"></div>
                     </div>
                 </div>
                 <div class="myBtn myBtn-next s2Next"><i class="fa-solid fa-chevron-right"></i></div>
@@ -66,7 +66,7 @@
                             <i class="fa-regular fa-heart fa-2x"></i>
                             <p>관심 가게</p>
                         </div>
-                        <div class="list_btn revi disFlex align-center">
+                        <div id="revi" class="list_btn revi disFlex align-center">
                             <i class="fa-regular fa-comment-dots fa-2x"></i>
                             <p>리뷰 등록</p>
                         </div>
@@ -113,7 +113,7 @@
                     
                 </div>
                 <div id="store_map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21002.01172388726!2d127.36394666449608!3d36.34991784984854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35654b3410441eb9%3A0x5c147a5b234f20ab!2z66qo66Oo!5e0!3m2!1sko!2skr!4v1663564877295!5m2!1sko!2skr" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21002.01172388726!2d127.36394666449608!3d36.34991784984854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35654b3410441eb9%3A0x5c147a5b234f20ab!2z66qo66Oo!5e0!3m2!1sko!2skr!4v1663564877295!5m2!1sko!2skr" width="300" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <!-- <div id="daumRoughmapContainer1663486057460" class="root_daum_roughmap root_daum_roughmap_landing"></div> -->
                 </div>
                 
@@ -139,9 +139,9 @@
                             <span><i class="fa-solid fa-pen-to-square"></i>2022.09.01</span>
                             <div class="star disFlex align-center">
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-regular fa-star-half-stroke"></i>
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                                 <i class="fa-regular fa-star"></i>
                             </div>
                             <p>
@@ -153,11 +153,11 @@
                                 대전에서........<span>더보기</span>
                             </p>
                             <div class="review_photo">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
+                                <img src="../images/review/moru_1.jpg">
+                                <img src="../images/review/moru_2.jpg">
+                                <img src="../images/review/moru_3.jpg">
+                                <img src="../images/review/moru_4.jpg">
+                                <img src="../images/review/moru_5.jpg">
                             </div>
                         </div>
                     </div>
@@ -187,9 +187,7 @@
                             </p>
                             <div class="review_photo">
                                 <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
+                                <img src="../images/review/870475_1661158051213_9323.jpg">
                                 <img src="../images/review/870475_1661158051213_9322.jpg">
                             </div>
                         </div>
@@ -222,10 +220,7 @@
                             </p>
                             <div class="review_photo">
                                 <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
-                                <img src="../images/review/870475_1661158051213_9322.jpg">
+                                <img src="../images/review/870475_1661158051213_9323.jpg">
                             </div>
                         </div>
                     </div>
@@ -241,7 +236,7 @@
     <!-- FOOTER -->
     <footer>
         <div id="footer_inner" class="disFlex justify-space-between">
-            <div class="logo"><img src="../images/logo_black.png" alt=""></div>
+            <div class="logo"><img src="../images/logo_small.png" alt=""></div>
             <div>
                 <ul class="footer_ul disFlex">
                     <li><a href="">개인정보이용약관</a></li>
@@ -289,15 +284,5 @@
       },
     });
   </script>
-  <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
 
-  <!-- 3. 실행 스크립트 -->
-  <script charset="UTF-8">
-      new daum.roughmap.Lander({
-          "timestamp" : "1663486057460",
-          "key" : "2bqrb",
-          "mapWidth" : "300",
-          "mapHeight" : "300"
-      }).render();
-  </script>
 </html>
