--- a/review/review_view.html
+++ b/review/review_view.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <a href="../index.html">
-            <img src="../images/logo_color.png" alt="로고">
+            <img src="../images/logo_design_4.png" alt="로고">
         </a>
     </header>
     <div class="content">
@@ -30,36 +30,43 @@
                 </div>
                 <p class="nickname">파쿠파쿠</p>
                 <p class="reg_date">2022.09.01<i class="fa-solid fa-pencil"></i></p>
-            </div>   
+            </div>  
+            <a href=""></a> 
             <div class="text_area">
+                <div>
+                    <p>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <!-- <i class="fa-regular fa-star-half-stroke"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i> -->
+                        <span>(4.0)</span>
+                    </p>
+                    
+                    <a href="">삭제</a>
+                    <a href="../review/review_update.html">수정</a>
+                </div>
                 <p>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star-half-stroke"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
-                    <span>(1.5)</span>
-                </p>
-                <p>
-                    맛있는 장어 덮밥집
-                    <br><br>
-                    예약을 하고 가지 않아서 도착하여 웨이팅을 걸고 조금 기다려서 식사를 하였습니다.
-                    매장이 넓어서 회전은 금방 금방 되었습니다. 방이 여러곳에 있는 것 같은데 제가 들어간 곳은 얼추 8팀 정도가 앉을 수 있었습니다.
-                    <br><br>
-                    가격이 조금 나가는 대표 메뉴인 히쯔마부시를 시켰습니다.
-                    <br><br>
-                    계란 푸딩이 빈속을 살짝 풀어주고, 단짠단짠한 장어 덮밥과 김과 밥을 같이 먹으니 맛있었습니다.
-                    조금 먹다가 옆에 있는 보온통의 오차즈케 육수를 넣어 먹으니 더 맛있었습니다. 약간 짭짤한 육수였는데 느끼함도 좀 줄고 풍미가 더 올라가는 느낌이였습니다.
-                    <br><br>
-                    조금 오늘은 가격이 나가는 장어덮밥이 땡긴다 할때 가기 좋을 거 같습니다 ㅎㅎ
+                    최소 열 번은 넘게 방문한 가게입니다. 하지만 먹어본 메뉴 종류가 그리 많진 않아요:) 
+                    종종 이 가게의 에그베네딕트와 프렌치토스트가 생각이 나곤 합니다
+                    <br><br>                       
+                    프렌치토스트는 엄청나게 특별하진 않지만, 이 가게가 주는 포근한 느낌과 잘 어울린다 말할 수 있습니다. 커스터드크림과 딸기잼, 메이플시럽이 바닐라아이스크림과 조화롭게 어우러집니다. 
+                    <br><br>            
+                    에그베네딕트는 특별합니다. 머스터드소스와 수란의 노른자도 좋지만, 해쉬브라운이 정말 맛있어요. 채 썬 양파조림이 해쉬브라운 표면에 올라가서, 새콤하면서도 양파의 단맛이 잘 느껴집니다. 
+                    <br><br>                       
+                    제게 만약 대전을 떠났다가 돌아오게되면, 이 음식을 먹을 때 비로소 대전으로 돌아왔다고 느낄 것 같습니다! 드셔보시는걸 추천드려용
                 </p>
                 <a href="../store/store_view.html">@마루심 - <span>대전 동구</span></a>
                 <div class="review_photo">
-                    <img src="../images/review/870475_1661158051213_9322.jpg">
-                    <img src="../images/review/870475_1661158051213_9323.jpg">
-                    <img src="../images/sec_5/두두당_3.jpg">
-                    <img src="../images/review/870475_1661158051213_9322.jpg">
-                    <img src="../images/review/870475_1661158051213_9322.jpg">
+                    <img src="../images/review/moru_1.jpg">
+                    <img src="../images/review/moru_2.jpg">
+                    <img src="../images/review/moru_3.jpg">
+                    <img src="../images/review/moru_4.jpg">
+                    <img src="../images/review/moru_5.jpg">
                 </div>
             </div> 
         </div>
@@ -75,19 +82,19 @@
                 >
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="../images/review/870475_1661158051213_9322.jpg" />
+                            <img src="../images/review/moru_1.jpg">
                         </div>
                         <div class="swiper-slide">
-                            <img src="../images/review/870475_1661158051213_9323.jpg" />
+                            <img src="../images/review/moru_2.jpg">
                         </div>
                         <div class="swiper-slide">
-                            <img src="../images/sec_5/두두당_3.jpg"/>
+                            <img src="../images/review/moru_3.jpg">
                         </div>
                         <div class="swiper-slide">
-                            <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                            <img src="../images/review/moru_4.jpg">
                         </div>
                         <div class="swiper-slide">
-                            <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                            <img src="../images/review/moru_5.jpg">
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
@@ -96,19 +103,19 @@
                 <div thumbsSlider="" class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="../images/review/870475_1661158051213_9322.jpg"/>
+                            <img src="../images/review/moru_1.jpg">
                         </div>
                         <div class="swiper-slide">
-                            <img src="../images/review/870475_1661158051213_9323.jpg"/>
+                            <img src="../images/review/moru_2.jpg">
                         </div>
                         <div class="swiper-slide">
-                            <img src="../images/sec_5/두두당_3.jpg" />
+                            <img src="../images/review/moru_3.jpg">
                         </div>
                         <div class="swiper-slide">
-                            <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                            <img src="../images/review/moru_4.jpg">
                         </div>
                         <div class="swiper-slide">
-                            <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                            <img src="../images/review/moru_5.jpg">
                         </div>
                     </div>
                 </div>
