--- a/member/member_join.html
+++ b/member/member_join.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="../index.html">
-            <img src="../images/logo_color.png" alt="로고">
+            <img src="../images/logo_design_4.png" alt="로고">
         </a>
     </header>
     <div class="under_bg2">
@@ -21,7 +21,7 @@
                 <span>회원가입</span>
             </h1>
             <div>
-                <a href="" class="member">
+                <a href="member_joinMember.html" class="member">
                     <h4>일반 회원</h4>
                     <div class="icon_box">
                         <div>
@@ -30,15 +30,15 @@
                         </div>
                         <div>
                             <img src="../images/join/m_c1.png" alt="">
-                            <span>리뷰 맛집</span>
+                            <span>리뷰 등록</span>
                         </div>
                         <div>
                             <img src="../images/join/m_c2.png" alt="">
-                            <span>관심 가게</span>
+                            <span>관심가게 등록</span>
                         </div>
                     </div>
                 </a>
-                <a href="" class="busi">
+                <a href="../member/member_joinBusiness.html" class="busi">
                     <h4>사업자 회원</h4>
                     <div class="icon_box">
                         <div>
@@ -73,7 +73,7 @@
                 <li><a href="">광고 및 제휴</a></li>
             </ul>
             <ul class="footer_ul">
-                <li><img src="../images/logo_black.png"></li>
+                <li><img src="../images/logo_design_4.png"></li>
                 <li>Copyright © Tastrip Corp. All Rights Reserved.</li>
             </ul>
             
