--- a/member/member_login.html
+++ b/member/member_login.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="../index.html">
-            <img src="../images/logo_color.png" alt="로고">
+            <img src="../images/logo_design_4.png" alt="로고">
         </a>
     </header>
     <div class="under_bg">
@@ -57,7 +57,7 @@
                 <li><a href="">광고 및 제휴</a></li>
             </ul>
             <ul class="footer_ul">
-                <li><img src="../images/logo_black.png"></li>
+                <li><img src="../images/logo_design_4.png"></li>
                 <li>Copyright © Tastrip Corp. All Rights Reserved.</li>
             </ul>
             
